# lagrangian-film-nn

./: .dockerignore  .gitignore  Dockerfile  README.md  mkdocs.yml  project_story.md  pyproject.toml
.github/workflows/: docs.yml
docs/: api.md  architecture.md  background.md  examples.md  how-the-model-works.md  index.md  installation.md  results.md  theory.md  usage.md
results/: visualization.py  visualization_utils.py
results/ood_tests/: model_T512_20260317_133032_case_0.npz  model_T512_20260317_133032_case_1.npz  model_T512_20260317_133032_case_2.npz  model_T512_20260317_133032_case_3.npz
results/rollouts/: model_T512_20260317_133032_test_traj_0.npz  model_T512_20260317_133032_test_traj_3.npz  model_T512_20260317_133032_test_traj_6.npz  model_T512_20260317_133032_test_traj_8.npz
src/: inference.py  losses.py  simulate.py  train.py  train_utils.py
src/data/: __init__.py  doublependulum.py  generate_dataset.py  utils.py
src/energy_validation/: kinpot_decomposition.py
src/lnn/: __init__.py  model.py
src/models/: model_T512_20260317_133032.eqx  model_T512_20260317_133032.npz
