[project]
name = "jax-practice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "diffrax>=0.7.2",
    "equinox>=0.13.6",
    "h5py>=3.16.0",
    "jax>=0.9.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "optax>=0.2.7",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
]
